--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,11 @@ body {
     font-size: .9em;
 }
 
+.container {
+	max-width: 1000px;
+	margin: 0 auto;
+}
+
 .alt-color {
 	background-color: #dededf;
 	border-radius: .5em;
